# azure_hello_world

./: .dockerignore  .env.example  .gitignore  .out-of-scope.md  AGENTS.md  AI.md  ASSESSMENT_PROMPT.md  CLAUDE.md  CONTEXT.md  Dockerfile  GEMINI.md  HttpTriggerHelloWorld.cs  ISSUES.md  README.md  SECURITY.md  TODO.md  Taskfile.yml  agents.md  azure_hello_world.code-workspace  bridge_stdout_dump.txt  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  hello-world.csproj  implementation_plan.md  inspect_client.py  inspect_client_v2.py  pyproject.toml  task.md  test_output.txt
.agents/workflows/: dev.md  docker-validate.md
.claude/: settings.json  settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.devcontainer.yml
.gemini/: settings.json
.gemini/policies/: agent-dev.toml  tools.toml
.github/: CODEOWNERS  dependabot.yml
.github/scripts/: agent-listener.ps1  check-module-map.ps1  dev-up.ps1  local_lm_coder.py  mcp-bridge-wrapper.js  runner.ps1  setup.ps1  sync-issues.ps1
.github/workflows/: ci.yml  infra-plan.yml  kanban-lanes.yml  master_az-000-helloworld.yml  orchestrator.yml  pr-checks.yml
.planning/29/: BLAST_RADIUS.md  state.json
architecture/: 000_architecture_template.md  001_mva_local_setup.md
capabilities/: compute_container_apps.md  database_cosmos_db.md  observability_prometheus.md
docs/: CODEBASE_MAP.md
infra/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  variables.tf
src/: config.py  main.py
tests/: __init__.py  conftest.py  mock.md  test_agent.py  test_agent_integration.py  test_app.py  test_architecture_composer.py  test_credential_passthrough.py  test_dockerfile.py  test_e2e_foundry.py  test_ingestion.py  test_intake_reviewer.py  test_m_diagram_engine.py  test_m_ingest.py  test_m_orchestrator.py  test_m_persist_design.py  test_m_tools.py  test_main.py  test_tools.py  test_ui_app.py
(+113 files in other folders)
