[project]
name = "azure-hello-world"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=0.21.0",
    "azure-ai-projects>=2.0.1",
    "azure-functions>=1.24.0",
    "azure-identity>=1.25.3",
    "pydantic>=2.12.5",
    "requests>=2.32.0",
    "streamlit>=1.55.0",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=4.1.0",
    "ruff>=0.15.9",
    "pip-audit>=2.7.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/scripts/*.py" = ["E501"]
